--- a/.github/workflows/test-hetzner.yml
+++ b/.github/workflows/test-hetzner.yml
@@ -3,8 +3,8 @@ name: 'Terraform'
 on:
   workflow_dispatch:
   push:
-    branches: [ "main" ]
-  pull_request:
+    branches-ignore: 
+      - main
 
 permissions:
   contents: read
