--- a/.github/workflows/test-hetzner.yml
+++ b/.github/workflows/test-hetzner.yml
@@ -28,26 +28,15 @@ jobs:
       with:
         ref: ${{ env.BRANCH_NAME }}
     - 
-      name: Checkout secrets repository.
-      uses: actions/checkout@v3
-      with:
-        repository: tomp736/awesome_kubernetes_secrets
-        token: ${{ secrets.SECRETS_PAT }}
-        path: ./secrets
-        ref: main
+      name: Create vars file for test.
+      run: |
+        echo "hcloud_token = ${{ secrets.HETZNER_TOKEN }}" >> /tests/hetzner/default.tfvars
     - 
       name: Terraform Plan
-      uses: labrats-work/action-terraform@main
-      with:
-        verb: plan
-        init: yes
-        varsFile: secrets/${{ env.BRANCH_NAME }}.tfvars
-        planFile: tfplan
-    - 
-      name: Terraform Apply
       uses: labrats-work/action-terraform@main
       with:
         chdir: tests/hetzner
         verb: plan
         init: yes
+        varsFile: default.tfvars
         planFile: tfplan
