--- a/.github/workflows/test-cloud-init.yml
+++ b/.github/workflows/test-cloud-init.yml
@@ -28,10 +28,6 @@ jobs:
       with:
         ref: ${{ env.BRANCH_NAME }}
     - 
-      name: Create vars file for test.
-      run: |
-        echo "libvirt_uri = \"qemu+ssh://${{ secrets.KVM_DEVELOPMENT_USERNAME }}@${{ secrets.KVM_DEVELOPMENT_HOSTNAME }}/system?sshauth=agent&known_hosts_verify=ignore\"" >> tests/kvm/default.tfvars
-    - 
       name: Terraform Plan
       uses: labrats-work/action-terraform@main
       with:
@@ -50,15 +46,18 @@ jobs:
     - 
       name: Test metadata file
       run: |
+        cd tests/cloud-init
         diff metadata default/metadata || exit 1
         exit 0
     - 
       name: Test networkconfig file
       run: |
+        cd tests/cloud-init
         diff metadata default/metadata || exit 1
         exit 0
     - 
       name: Test userdatafile
       run: |
+        cd tests/cloud-init
         diff metadata default/metadata || exit 1
         exit 0
