update hetzner node to use cloud-init module

--- a/.github/workflows/test-hetzner.yml
+++ b/.github/workflows/test-hetzner.yml
@@ -40,3 +40,12 @@ jobs:
         init: yes
         varsFile: default.tfvars
         planFile: tfplan
+    - 
+      name: Terraform Apply
+      uses: labrats-work/action-terraform@main
+      with:
+        chdir: tests/hetzner
+        verb: apply
+        init: yes
+        varsFile: default.tfvars
+        planFile: tfplan
