--- a/.github/workflows/test-hetzner.yml
+++ b/.github/workflows/test-hetzner.yml
@@ -30,8 +30,14 @@ jobs:
     - 
       name: Create vars file for test.
       run: |
+        cd tests/hetzner
         echo "hcloud_token = \"${{ secrets.HETZNER_TOKEN }}\"" >> tests/hetzner/default.tfvars
         echo "branch_name = \"${{ env.BRANCH_NAME }}\"" >> tests/hetzner/default.tfvars
+    - 
+      name: Update config files for test.
+      run: |
+        cd tests/hetzner
+        sed -i |hetzner.name|${{ env.BRANCH_NAME }}| files/node_config.json
     - 
       name: Terraform Plan
       uses: labrats-work/action-terraform@main
