--- a/.github/workflows/test-hetzner.yml
+++ b/.github/workflows/test-hetzner.yml
@@ -37,7 +37,7 @@ jobs:
       name: Update config files for test.
       run: |
         cd tests/hetzner
-        sed -i |hetzner.name|${{ env.BRANCH_NAME }}| files/node_config.json
+        sed -i 's|hetzner.name|${{ env.BRANCH_NAME }}|'' files/node_config.json
     - 
       name: Terraform Plan
       uses: labrats-work/action-terraform@main
