--- a/.github/workflows/test-hetzner.yml
+++ b/.github/workflows/test-hetzner.yml
@@ -31,13 +31,13 @@ jobs:
       name: Create vars file for test.
       run: |
         cd tests/hetzner
-        echo "hcloud_token = \"${{ secrets.HETZNER_TOKEN }}\"" >> tests/hetzner/default.tfvars
-        echo "branch_name = \"${{ env.BRANCH_NAME }}\"" >> tests/hetzner/default.tfvars
+        echo "hcloud_token = \"${{ secrets.HETZNER_TOKEN }}\"" >> default.tfvars
+        echo "branch_name = \"${{ env.BRANCH_NAME }}\"" >> default.tfvars
     - 
       name: Update config files for test.
       run: |
         cd tests/hetzner
-        sed -i 's|hetzner.name|${{ env.BRANCH_NAME }}|'' files/node_config.json
+        sed -i 's|hetzner.name|${{ env.BRANCH_NAME }}|' files/node_config.json
     - 
       name: Terraform Plan
       uses: labrats-work/action-terraform@main
