--- a/.github/workflows/test-hetzner.yml
+++ b/.github/workflows/test-hetzner.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         ssh-keygen -t ed25519 -N '' -f id_ed25519
         xargs -a id_ed25519 -I{} -d'\n' echo ::add-mask::{}
-        xargs -a ed25519 -I{} -d'\n' echo ::add-mask::{}
+        xargs -a id_ed25519.pub -I{} -d'\n' echo ::add-mask::{}
 
         echo "Loading KEYFILE \"id_ed25519\" into GITHUB_ENV."
         echo 'KEYFILE<<EOF' >> $GITHUB_ENV
