run on path, include main

--- a/.github/workflows/test-cloud-init.yml
+++ b/.github/workflows/test-cloud-init.yml
@@ -3,8 +3,8 @@ name: 'Test modules/cloud-init'
 on:
   workflow_dispatch:
   push:
-    branches-ignore: 
-      - main
+    paths:
+      - 'modules/cloud-init/**'
 
 permissions:
   contents: read
