--- a/.github/workflows/test-hetzner.yml
+++ b/.github/workflows/test-hetzner.yml
@@ -85,8 +85,8 @@ jobs:
     - 
       name: Sleep
       run: |
-        echo "Will destroy node in 5 minutes"
-        sleep 5m
+        echo "Will destroy node in 1 minute."
+        sleep 1m
     - 
       if: always()
       name: Terraform Destroy
