--- a/.github/workflows/test-hetzner.yml
+++ b/.github/workflows/test-hetzner.yml
@@ -3,8 +3,8 @@ name: 'Test modules/hetzner/node'
 on:
   workflow_dispatch:
   push:
-    branches-ignore: 
-      - main
+    paths:
+      - 'modules/hetzner/**'
 
 permissions:
   contents: read
@@ -20,6 +20,11 @@ jobs:
     defaults:
       run:
         shell: bash
+
+    strategy:
+      fail-fast: false
+      matrix: 
+        image: [ debian-11, fedora-36, rocky-9, ubuntu-22.04 ]
 
     steps:
     - 
@@ -50,13 +55,14 @@ jobs:
       run: |
         cd tests/hetzner
         echo "hcloud_token = \"${{ secrets.HETZNER_TOKEN }}\"" >> default.tfvars
-        echo "branch_name = \"${{ env.BRANCH_NAME }}\"" >> default.tfvars
+        echo "test_id = \"${{ env.BRANCH_NAME }}-${{ matrix.image }}\"" >> default.tfvars
         echo "github_public_key = \"${{ env.PUBKEYFILE }}\"" >> default.tfvars
     - 
       name: Update config files for test.
       run: |
         cd tests/hetzner
-        sed -i 's|hetzner.name|${{ env.BRANCH_NAME }}|' files/node_config.json
+        sed -i 's|hetzner.name|${{ env.BRANCH_NAME }}-${{ matrix.image }}|' files/node_config.json
+        sed -i 's|hetzner.image|${{ matrix.image }}|' files/node_config.json
     - 
       name: Terraform Plan
       uses: labrats-work/action-terraform@main
@@ -79,8 +85,8 @@ jobs:
     - 
       name: Sleep
       run: |
-        echo "Will destroy node in 5 minutes"
-        sleep 5m
+        echo "Will destroy node in 1 minute."
+        sleep 1m
     - 
       if: always()
       name: Terraform Destroy
