--- a/.github/workflows/test-aws.yml
+++ b/.github/workflows/test-aws.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - '.github/workflows/test-aws.yml'
       - 'modules/aws/**'
+      - 'tests/aws/**'
 
 permissions:
   contents: read
