--- a/.github/workflows/test-cloud-init.yml
+++ b/.github/workflows/test-cloud-init.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - '.github/workflows/test-cloud-init.yml'
       - 'modules/cloud-init/**'
+      - 'tests/cloud-init/**'
 
 permissions:
   contents: read
