--- a/.github/workflows/test-hetzner.yml
+++ b/.github/workflows/test-hetzner.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - '.github/workflows/test-hetzner.yml'
       - 'modules/hetzner/**'
+      - 'tests/hetzner/**'
 
 permissions:
   contents: read
