--- a/.github/workflows/test-aws.yml
+++ b/.github/workflows/test-aws.yml
@@ -58,15 +58,15 @@ jobs:
     - 
       name: Create aws credentials and config files.
       run: |
-        mkdir -p ~/.aws
-        echo "~/.aws/credentials"
+        mkdir -p .aws
+        echo ".aws/credentials"
         echo "[default]" > ~/.aws/credentials
-        echo "aws_access_key_id = \"${{ secrets.AWS_ACCESS_KEY_ID }}\"" >> ~/.aws/credentials
-        echo "aws_secret_access_key = \"${{ secrets.AWS_SECRET_ACCESS_KEY }}\"" >> ~/.aws/credentials
+        echo "aws_access_key_id = \"${{ secrets.AWS_ACCESS_KEY_ID }}\"" >> .aws/credentials
+        echo "aws_secret_access_key = \"${{ secrets.AWS_SECRET_ACCESS_KEY }}\"" >> .aws/credentials
 
-        echo "~/.aws/config"
+        echo ".aws/config"
         echo "[default]" > ~/.aws/config
-        echo "region = \"eu-north-1\"" >> ~/.aws/config
+        echo "region = \"eu-north-1\"" >> .aws/config
     - 
       name: Update config files for test.
       run: |
