--- a/.github/workflows/test-aws.yml
+++ b/.github/workflows/test-aws.yml
@@ -60,12 +60,12 @@ jobs:
       run: |
         mkdir -p .aws
         echo ".aws/credentials"
-        echo "[default]" > ~/.aws/credentials
+        echo "[default]" > .aws/credentials
         echo "aws_access_key_id = \"${{ secrets.AWS_ACCESS_KEY_ID }}\"" >> .aws/credentials
         echo "aws_secret_access_key = \"${{ secrets.AWS_SECRET_ACCESS_KEY }}\"" >> .aws/credentials
 
         echo ".aws/config"
-        echo "[default]" > ~/.aws/config
+        echo "[default]" > .aws/config
         echo "region = \"eu-north-1\"" >> .aws/config
     - 
       name: Update config files for test.
