--- a/.github/workflows/test-aws.yml
+++ b/.github/workflows/test-aws.yml
@@ -58,6 +58,7 @@ jobs:
     - 
       name: Create aws credentials and config files.
       run: |
+        cd tests/aws
         mkdir -p .aws
         echo ".aws/credentials"
         echo "[default]" > .aws/credentials
