--- a/.github/workflows/test-aws.yml
+++ b/.github/workflows/test-aws.yml
@@ -99,7 +99,19 @@ jobs:
         sleep 1m
     - 
       if: always()
+      id: destroy
+      continue-on-error: true
       name: Terraform Destroy
+      uses: labrats-work/action-terraform@main
+      with:
+        chdir: tests/aws
+        verb: destroy
+        init: yes
+        varsFile: default.tfvars
+        sshKey: ${{ env.KEYFILE }}
+    - 
+      if: always() && steps.destroy.outcome == 'failure'
+      name: Terraform Destroy Retry
       uses: labrats-work/action-terraform@main
       with:
         chdir: tests/aws
