--- a/.github/workflows/test-aws.yml
+++ b/.github/workflows/test-aws.yml
@@ -111,6 +111,20 @@ jobs:
         sshKey: ${{ env.KEYFILE }}
     - 
       if: always() && steps.destroy.outcome == 'failure'
+      id: destroy2
+      continue-on-error: true
+      name: Terraform Destroy Retry
+      uses: labrats-work/action-terraform@main
+      with:
+        chdir: tests/aws
+        verb: destroy
+        init: yes
+        varsFile: default.tfvars
+        sshKey: ${{ env.KEYFILE }}
+    - 
+      if: always() && steps.destroy2.outcome == 'failure'
+      id: destroy2
+      continue-on-error: true
       name: Terraform Destroy Retry
       uses: labrats-work/action-terraform@main
       with:
