--- a/.github/workflows/test-hetzner.yml
+++ b/.github/workflows/test-hetzner.yml
@@ -62,8 +62,8 @@ jobs:
       name: Update config files for test.
       run: |
         cd tests/hetzner
-        sed -i 's|hetzner.name|${{ env.BRANCH_NAME }}-${{ matrix.image }}|' files/node_config.json
-        sed -i 's|hetzner.image|${{ matrix.image }}|' files/node_config.json
+        sed -i 's|hetzner.name|${{ env.BRANCH_NAME }}-${{ matrix.image }}|' files/config.json
+        sed -i 's|hetzner.image|${{ matrix.image }}|' files/config.json
     - 
       name: Terraform Plan
       uses: labrats-work/action-terraform@main
