--- a/.github/workflows/test-kvm.yml
+++ b/.github/workflows/test-kvm.yml
@@ -4,7 +4,9 @@ on:
   workflow_dispatch:
   push:
     paths:
+      - '.github/workflows/test-kvm.yml'
       - 'modules/kvm/**'
+      - 'tests/kvm/**'
 
 permissions:
   contents: read
@@ -13,7 +15,6 @@ jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
-    environment: production
     env:
       BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
