refactor for tests

--- a/.github/workflows/test-aws.yml
+++ b/.github/workflows/test-aws.yml
@@ -14,6 +14,7 @@ permissions:
 jobs:
   terraform:
     uses: ./.github/workflows/deploy-test.yml
+    secrets: inherit
 
     strategy:
       fail-fast: false
