--- a/.github/workflows/test-aws.yml
+++ b/.github/workflows/test-aws.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
   push:
     paths:
+      - '.github/workflows/deploy-test.yml'
       - '.github/workflows/test-aws.yml'
       - 'modules/aws/**'
       - 'tests/aws/**'
