--- a/.github/workflows/test-hetzner.yml
+++ b/.github/workflows/test-hetzner.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
   push:
     paths:
+      - '.github/workflows/deploy-test.yml'
       - '.github/workflows/test-hetzner.yml'
       - 'modules/hetzner/**'
       - 'tests/hetzner/**'
