--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -10,6 +10,10 @@ on:
         type: string
         description: Hetzner Image to Use
         required: true
+      MACHINENAME:
+        type: string
+        description: Server Name
+        required: true
       TESTPATH:
         type: string
         description: Test to run
@@ -69,8 +73,8 @@ jobs:
       name: Update config files for test.
       run: |
         cd ${{ inputs.TESTPATH }}
-        sed -i 's|hetzner.node|${{ github.sha }}-${{ inputs.IMAGE }}-node|' files/config.json
-        sed -i 's|hetzner.network|${{ github.sha }}-${{ inputs.IMAGE }}-net|' files/config.json
+        sed -i 's|hetzner.node|${{ github.run_id }}-${{ inputs.IMAGE }}-node|' files/config.json
+        sed -i 's|hetzner.network|${{ github.run_id }}-${{ inputs.IMAGE }}-net|' files/config.json
         sed -i 's|hetzner.image|${{ inputs.IMAGE }}|' files/config.json
     - 
       name: Terraform Init
